# CalculationEngine

./: CMakeLists.txt  README.md
engines/: CMakeLists.txt
engines/include/: divider_engine.h  engine.h  engine_factory.h  multiplier_engine.h
engines/src/: divider_engine.cpp  engine_factory.cpp  multiplier_engine.cpp
example/: CMakeLists.txt  calc.cpp
test/: CMakeLists.txt  test_divider_engine.cpp
